# PyBOP

./: .all-contributorsrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  asv.conf.json  conftest.py  multiprocessing_bench.py  multiprocessing_profile.prof  noxfile.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  run-tests.py  serial_profile.prof  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  release_workflow.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: deploy-docs.yaml  draft-pdf.yml  lychee_links.yaml  nightly_dependency_tests.yaml  periodic_benchmarks.yaml  release-action.yaml  release_action.yaml  scheduled_tests.yaml  test_on_pull_request.yaml  test_on_push.yaml
PRISM/: .gitignore
PRISM/models/: base_model.py
PRISM/optimisation/: base_optimisation.py
PRISM/simulation/: base_simulation.py
PyBOP/models/: base_model.py
assets/: PyBOP-Architecture.drawio  PyBOP_Architecture.drawio
benchmarks/: README.md  benchmark_model.py  benchmark_optim_construction.py  benchmark_parameterisation.py  benchmark_track_parameterisation.py  benchmark_utils.py  parameterisation_benchmark.py
docs/: Contributing.md  conf.py  contributing.md  diagram.puml  diagram.uml  index.md  installation.rst  optimisers.rst  quick_start.rst
docs/_extension/: gallery_directive.py
docs/_static/: custom-icon.js  switcher.json
docs/api/: index.rst
docs/source/: conf.py  index.rst  modules.rst  pybop.costs.rst  pybop.datasets.rst  pybop.optimisers.rst  pybop.parameters.rst  pybop.plotting.rst  pybop.rst
docs/user_guide/: index.md  installation.rst  usage.rst
examples/: Chen_example.csv  Initial_API.py  Initial_HMC_API.py  NLOpt_kinetics.py  README.md  Simulation.py  numpro_example.py
examples/costs/: standalone.py
examples/data/: README.md
examples/notebooks/: 1-single-pulse-circuit-model.ipynb  adamw_identification.ipynb  comparing_cost_functions.ipynb  cost-compute-methods.ipynb  cost_compute_methods.ipynb  creating_a_model.ipynb  creating_a_problem.ipynb  ecm_trust-constr.ipynb  electrode_balancing.ipynb  energy_based_electrode_design.ipynb  equivalent_circuit_identification.ipynb  equivalent_circuit_identification_hppc.ipynb  equivalent_circuit_identification_multipulse.ipynb  importing_cycler_data.ipynb  importing_cycler_data_old.ipynb  maximum_a_posteriori.ipynb  monte_carlo_ecm_identification.ipynb  monte_carlo_sampling.ipynb  multi_model_identification.ipynb  multi_optimiser_identification.ipynb  multiprocessing.ipynb  optimiser_calibration.ipynb  optimiser_interface.ipynb  posteriors.ipynb  pouch_cell_CMAES.ipynb  pouch_cell_identification.ipynb  rmse-estimisation.ipynb  single_pulse_circuit_model.ipynb  solver_selection.ipynb  spm_Adam.ipynb  spm_AdamW.ipynb  spm_CMAES.ipynb  spm_EIS.ipynb  spm_electrode_design.ipynb  spm_nlopt.ipynb  spm_scipy_DifferentialEvolution.ipynb  transformation_introduction.ipynb  view_the_notebooks.md
examples/parameters/: initial_ecm_parameters.json
examples/scripts/: BPX_spm.py  CMAES.py  Initial_API.py  NUTS_MCMC.py  SPM_example.py  changing_solvers.py  cuckoo.py  ecm_CMAES.py  ecm_CMAES_nonlinear_constraints.py  ecm_parameters.py  ecm_tau_constraints.py  ecm_trust-constr.py  ecm_with_tau.py  eis_fitting.py  exp_UKF.py  functional_parameters.py  gitt.py  gitt_scipymin.py  grad_descent.py  grouped_SPMe.py  importance_sampling.py  jax-solver-example.py  jaxified-idaklu-benchmarks.py  jaxified-idaklu-example.py  linked_parameters.py  maximising_energy.py  maximising_power.py  maximum_a_posteriori.py  maximum_likelihood.py  mcmc_example.py  mle.py  multi_fitting.py  numpro_example.py  ocp_balancing.py  parameter_estimation_from_Chen_data.py  parameter_estimation_from_synthetic_data.py  pyro-ex.py  pyro_example.py  rmse-estimisation.py  rmse_estimation.py  (+22 more)
examples/standalone/: cost.py  exponential_decay.py  model.py  optimiser.py  problem.py
joss/: design_plots.py  image_combine.sh  paper.bib  paper.md  paper.preprint.tex  param_plots.py
papers/Hallemans et al/: Fig10_EIS_Fitting_LGM50LT.py  Fig11_tauSensitivity.py  Fig11_validationLGM50LT.py  Fig12_EIS_Fitting_Simulation.py  Fig12_tauSensitivity.py  Fig13_EIS_Fitting_Simulation.py  Fig2_timeDomainSimulation.py  Fig4_comparisonBruteForceFreqDomain.py  Fig5_impedance_models.py  Fig7_impedance_SOC_SPMegrouped.py  Fig8_groupedParamSensitivity.py  README.md  timeDomain_Fitting_Simulation.py
papers/joss/: design_plots.py  image_combine.sh  paper.bib  paper.md  paper.preprint.tex  param_plots.py
pybop/: __init__.py  _classification.py  _costs.py  _dataset.py  _evaluation.py  _experiment.py  _inference.py  _likelihoods.py  _logging.py  _mcmc.py  _optimisation.py  _problem.py  _pybamm_eis_pipeline.py  _pybamm_pipeline.py  _result.py  _utils.py  _version.py  observations.py  optimisation.py  parameter_sets.py  parameterisation.py  parameters.py  priors.py  simulation.py  utils.py  version.py
pybop/analysis/: classification.py  sensitivity_analysis.py
pybop/applications/: base_method.py  gitt_methods.py  ocp_average.py  ocp_methods.py
pybop/builders/: __init__.py  base.py  diffsol.py  multi_fitting.py  pybamm.py  pybamm_eis.py  pybamm_eis_builder.py  python.py  python_builder.py  utils.py
pybop/cost_functions/: mle.py  rmse.py
pybop/costs/: __init__.py  _likelihoods.py  _weighted_cost.py  base_cost.py  base_cost_old.py  design_cost.py  design_costs.py  diffsol.py  error_costs.py  error_measures.py  evaluation.py  feature_distances.py  fitting_costs.py  likelihoods.py  mle.py  parameterised_costs.py  pybamm_cost.py  pybamm_sum_squared_error.py  standalone.py  weighted_cost.py
pybop/datasets/: base_dataset.py
pybop/experimental/: __init__.py  _ep_bolfi.py  _evaluation.py  _expectation_propagation_cost.py  base_bayes_optimiser.py  jax_costs.py  multivariate_parameters.py  multivariate_priors.py  parameterized_costs.py  plot_bayes.py  pybamm_costs.py  test_ep_bolfi.py
pybop/identification/: __init__.py  observations.py  (+2 more)
tests/: Simulation.py
(+516 files in other folders)
