[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "pybop"
version = "24.2"
authors = [
  {name = "The PyBOP Team"},
]
maintainers = [
  {name = "The PyBOP Team"},
]
description = "Python Battery Optimisation and Parameterisation"
readme = "README.md"
license = { file = "LICENSE" }
# https://pypi.org/classifiers/
classifiers = []
requires-python = ">=3.8, <3.13"
dependencies = [
  "pybamm>=23.5",
  "numpy>=1.16",
  "scipy>=1.3",
  "pints>=0.5",
]

[project.optional-dependencies]
# Split kaleido into two dependencies to avoid Windows hang
# See: https://github.com/plotly/Kaleido/issues/110
plot = ["plotly>=5.0",
        "kaleido==0.1.0.post1; sys_platform == 'win32'",
        "kaleido>=0.2; sys_platform != 'win32'",
]
docs = [
    "pydata-sphinx-theme",
    "sphinx>=6",
    "sphinx-autobuild",
    "sphinx-autoapi",
    "sphinx_copybutton",
    "sphinx_favicon",
    "sphinx_design",
    "myst-parser",
]
dev = [
    "nox",
    "nbmake",
    "pre-commit",
    "pytest>=6",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
    "ruff",
    ]
all = ["pybop[plot]"]

[tool.setuptools.packages.find]
include = ["pybop", "pybop.*"]

[project.urls]
Homepage = "https://github.com/pybop-team/PyBOP"

[tool.pytest.ini_options]
addopts = "--showlocals -v -n auto"

[tool.ruff]
extend-include = ["*.ipynb"]
extend-exclude = ["__init__.py"]

[tool.ruff.lint]
ignore = ["E501","E741"]

[tool.ruff.lint.per-file-ignores]
"**.ipynb" = ["E402", "E703"]
